Prevent app_controller_mac.mm access lastProfile when EnterpriseStartupDialog is displayed.

Because the dialog must be displayed before the Profile initalization as
the process might load the extensions which might open browser windows.

TEST=Set up a invalid token by setting any non-empty string in policy.
     MachineLevelUserCloudPolicyEnrollmentToken.
     a) Login mac.
     b) Create com.google.Chrome.plist (org.chromium.Chromium.plist for chromium) for the
        following content:
         <?xml version="1.0" encoding="UTF-8"?>
         <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
         <plist version="1.0">
         <dict>
            <key>MachineLevelUserCloudPolicyEnrollmentToken</key>
            <string>invalid-token</string>
         </dict>
         </plist>
     (More details in https://support.google.com/chrome/a/answer/7550274?hl=en)
     Launch Chrome. Instead of the chrome window, there should be an error dialog indicates
     that launching is blocked.
     1) The error dialog could be hidden/shown, lose or gain focus without any issue.
     2) Clicking any option in the menu bar or dock menu shouldn't open any browser window.

Bug: 860540
Change-Id: Ibf4b7c2794a8ad78b9fedb2da67512508d3d7621
Reviewed-on: https://chromium-review.googlesource.com/1145862
Commit-Queue: Owen Min <zmin@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580242}
Former-commit-id: 8c5d538edca1d4ce88f6339e15b147def089b77a